[gd_scene load_steps=54 format=3 uid="uid://byc3lpclkmwl5"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_yw8p5"]
[ext_resource type="Texture2D" uid="uid://bhraq4gp0hdaq" path="res://animations/player_animation/grubas.png" id="3_whqbs"]
[ext_resource type="Texture2D" uid="uid://bk01042woou03" path="res://animations/player_animation/grubas_heavy_shoes.png" id="3_yeepy"]
[ext_resource type="Texture2D" uid="uid://56m8fc1e8imy" path="res://animations/player_animation/grubas_jump_idle.png" id="4_0w61n"]
[ext_resource type="Texture2D" uid="uid://bqbkpen7dwmjw" path="res://animations/player_animation/grubas_jump.png" id="4_p2b0f"]
[ext_resource type="Texture2D" uid="uid://dr3dp71maa6wf" path="res://animations/player_animation/szczupły_grubas_jump_idle.png" id="4_w05u0"]
[ext_resource type="Texture2D" uid="uid://npa28vfxtg7k" path="res://animations/player_animation/szczupły_grubas.png" id="5_kpr45"]
[ext_resource type="Texture2D" uid="uid://capcdluyu250y" path="res://animations/player_animation/grubas_move.png" id="5_ss15r"]
[ext_resource type="Texture2D" uid="uid://ckhl7bq33l8w1" path="res://animations/player_animation/grubas_jump_idle_heavy_shoes.png" id="5_v11io"]
[ext_resource type="Texture2D" uid="uid://boknktgsqfb47" path="res://animations/player_animation/szczupły_grubas_jump_idle_heavy_shoes.png" id="6_m6l1c"]
[ext_resource type="Texture2D" uid="uid://dddn2xwfy4rw2" path="res://animations/player_animation/gazy.png" id="6_s356s"]
[ext_resource type="Texture2D" uid="uid://fbn42t7cf61k" path="res://animations/player_animation/szczupły_grubas_jump.png" id="7_vd1pw"]
[ext_resource type="Texture2D" uid="uid://ckl8lreas8pf5" path="res://animations/player_animation/szczupły_grubas_heavy_shoes.png" id="8_dfthm"]
[ext_resource type="AudioStream" uid="uid://dkd6dij1axa2j" path="res://sounds/small_fart.wav" id="8_lfbpk"]
[ext_resource type="Texture2D" uid="uid://cneggvm27ou64" path="res://animations/player_animation/grubas_jump_heavy_shoes.png" id="9_iu28m"]
[ext_resource type="AudioStream" uid="uid://ipxlch24gb2r" path="res://sounds/jump/350898__cabled_mess__jump_c_08.wav" id="9_mm3qy"]
[ext_resource type="Texture2D" uid="uid://c8axep4x1e0j8" path="res://animations/player_animation/szczupły_grubas_move.png" id="9_uf6pu"]
[ext_resource type="AudioStream" uid="uid://umox46enymub" path="res://sounds/jump/gas_power.wav" id="10_tu51o"]
[ext_resource type="Texture2D" uid="uid://dyp311idr1xt2" path="res://animations/player_animation/grubas_move_heavy_shoes.png" id="12_rtrkf"]
[ext_resource type="Texture2D" uid="uid://nwjel06bbbys" path="res://animations/player_animation/szczupły_grubas_jump_heavy_shoes.png" id="12_uo33v"]
[ext_resource type="Texture2D" uid="uid://ppt560kic5ep" path="res://animations/player_animation/szczupły_grubas_move_heavy_shoes.png" id="16_1wcq3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rdi73"]
atlas = ExtResource("3_yeepy")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rawc"]
atlas = ExtResource("4_0w61n")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jiqj7"]
atlas = ExtResource("5_v11io")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ukib"]
atlas = ExtResource("6_m6l1c")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvmxb"]
atlas = ExtResource("4_w05u0")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l7s1"]
atlas = ExtResource("8_dfthm")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg01a"]
atlas = ExtResource("5_kpr45")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3bvt"]
atlas = ExtResource("4_p2b0f")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_al07p"]
atlas = ExtResource("9_iu28m")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg72s"]
atlas = ExtResource("12_uo33v")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob0aq"]
atlas = ExtResource("7_vd1pw")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0htd"]
atlas = ExtResource("5_ss15r")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_eybcl"]
atlas = ExtResource("5_ss15r")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_73sow"]
atlas = ExtResource("5_ss15r")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hihdx"]
atlas = ExtResource("5_ss15r")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhkdq"]
atlas = ExtResource("12_rtrkf")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw8bk"]
atlas = ExtResource("12_rtrkf")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnwsg"]
atlas = ExtResource("12_rtrkf")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyv71"]
atlas = ExtResource("12_rtrkf")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwt3h"]
atlas = ExtResource("16_1wcq3")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nilxo"]
atlas = ExtResource("16_1wcq3")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlsa5"]
atlas = ExtResource("16_1wcq3")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh6g2"]
atlas = ExtResource("16_1wcq3")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_stcec"]
atlas = ExtResource("9_uf6pu")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6nw4"]
atlas = ExtResource("9_uf6pu")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5pmp"]
atlas = ExtResource("9_uf6pu")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8owal"]
atlas = ExtResource("9_uf6pu")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_0map3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_whqbs")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdi73")
}],
"loop": true,
"name": &"idle_heavy_shoes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rawc")
}],
"loop": true,
"name": &"idle_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jiqj7")
}],
"loop": true,
"name": &"idle_jump_heavy_shoes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ukib")
}],
"loop": true,
"name": &"idle_jump_pow_up_heavy_shoes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvmxb")
}],
"loop": true,
"name": &"idle_jump_power_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l7s1")
}],
"loop": true,
"name": &"idle_pow_up_heavy_shoes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg01a")
}],
"loop": true,
"name": &"idle_power_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3bvt")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_al07p")
}],
"loop": true,
"name": &"jump_heavy_shoes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg72s")
}],
"loop": true,
"name": &"jump_pow_up_heavy_shoes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob0aq")
}],
"loop": true,
"name": &"jump_power_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0htd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eybcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73sow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hihdx")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhkdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw8bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnwsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyv71")
}],
"loop": true,
"name": &"move_heavy_shoes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwt3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nilxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlsa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh6g2")
}],
"loop": true,
"name": &"move_pow_up_heavy_shoes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_stcec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6nw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5pmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8owal")
}],
"loop": true,
"name": &"move_power_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ps2n6"]
size = Vector2(54, 90)

[sub_resource type="Animation" id="Animation_d45ln"]
resource_name = "Farts"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Farts:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_64n6d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Farts:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x55a3"]
_data = {
"Farts": SubResource("Animation_d45ln"),
"RESET": SubResource("Animation_64n6d")
}

[node name="Player" type="CharacterBody2D"]
z_index = 2
collision_mask = 22
script = ExtResource("1_yw8p5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5, -5)
sprite_frames = SubResource("SpriteFrames_0map3")
animation = &"move_pow_up_heavy_shoes"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9, -3)
shape = SubResource("RectangleShape2D_ps2n6")

[node name="Farts" type="Sprite2D" parent="."]
position = Vector2(-22, 33)
texture = ExtResource("6_s356s")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x55a3")
}

[node name="FartsTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="FartAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_lfbpk")
volume_db = -1.0

[node name="JumpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_mm3qy")
volume_db = 10.0

[node name="GasAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_tu51o")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(9, -3)
shape = SubResource("RectangleShape2D_ps2n6")

[connection signal="timeout" from="FartsTimer" to="." method="_on_farts_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
